--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <div class="player2">Player2</div>
     </div>
     <main class="board">
-      <div class="board__field field-1" data-cell="0"></div>
-      <div class="board__field field-2" data-cell="1"></div>
-      <div class="board__field field-3" data-cell="2"></div>
-      <div class="board__field field-4" data-cell="3"></div>
-      <div class="board__field field-5" data-cell="4"></div>
-      <div class="board__field field-6" data-cell="5"></div>
-      <div class="board__field field-7" data-cell="6"></div>
-      <div class="board__field field-8" data-cell="7"></div>
-      <div class="board__field field-9" data-cell="8"></div>
+      <div class="board__field hover-effect field-1" data-cell="0"></div>
+      <div class="board__field hover-effect field-2" data-cell="1"></div>
+      <div class="board__field hover-effect field-3" data-cell="2"></div>
+      <div class="board__field hover-effect field-4" data-cell="3"></div>
+      <div class="board__field hover-effect field-5" data-cell="4"></div>
+      <div class="board__field hover-effect field-6" data-cell="5"></div>
+      <div class="board__field hover-effect field-7" data-cell="6"></div>
+      <div class="board__field hover-effect field-8" data-cell="7"></div>
+      <div class="board__field hover-effect field-9" data-cell="8"></div>
     </main>
     <button class="reset">RESET</button>
   </body>
