--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="game__info">
+    <div class="game-info">
       <div class="player1">Player1</div>
       <div class="player2">Player2</div>
     </div>
@@ -25,5 +25,6 @@
       <div class="board__field hover-effect field-9" data-cell="8"></div>
     </main>
     <button class="reset">RESET</button>
+    <div class="winner-info">WINER: <span class="winner"></span></div>
   </body>
 </html>
